--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,8 @@
 <%- include('header') -%>
 
 <h1>Undir&shy;skriftar&shy;listi — umsjón</h1>
-
+<p>Innskráður sem: <strong><%= username %></strong></p>
+<a href="/admin/logout">Útskrá</a>
 
 <%- include('list') -%>
 
